# playwright-python-ui-framework

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml
components/: examples.py
core/: browser.py  conditions.py  element.py
core/elements/: button.py  input.py
tests/: test_sample.py
