[project]
name = "playwright-python-ui-framework"
version = "0.1.0"
description = "Playwright UI testing framework"
authors = [
    {name = "Margarita Gonchar"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "playwright (>=1.58.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-playwright (>=0.7.2,<0.8.0)",
    "allure-pytest (>=2.15.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
